Minor fixes and improvements

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,29 @@
 html {
+    height: 100vh;
+
     font-family: "Roboto Light", sans-serif;
 }
+
+body {
+    height: 100%;
+}
+
+footer {
+    margin-top: auto;
+    height: 60px;
+}
+
+.z-high { z-index: 600; }
+
+.z-highest { z-index: 999; }
 
 .pos-sticky { position: sticky; }
 
 .pos-absolute { position: absolute; }
+
+.pos-relative { position: relative; }
+
+.pos-fixed { position: fixed; }
 
 .pos-top { top: 0; }
 
@@ -50,6 +69,8 @@ html {
 
 .w-200 { width: 200px; }
 
+.w-300 { width: 300px; }
+
 .w-400 { width: 400px; }
 
 .w-600 { width: 600px; }
@@ -78,8 +99,6 @@ html {
 .br-10 { border-radius: 10px; }
 
 .br-round { border-radius: 999px; }
-
-.border-white { border-color: whitesmoke; }
 
 .border-small {
     border-width: 2px;
@@ -122,8 +141,6 @@ html {
 }
 
 .alert-box {
-    z-index: 999;
-
     display: none;
 
     opacity: 0;
